--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -10,6 +10,8 @@
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
 	--color-text: rgba(0, 0, 0, 0.7);
+	--color-button: #ffffff;
+	--color-button-hover: #cdcdcd;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
@@ -86,6 +88,18 @@ button {
 
 button:focus:not(:focus-visible) {
 	outline: none;
+}
+
+button {
+	padding: 0 1em;
+	height: 2em;
+	background: var(--color-button);
+	border: 0px;
+	border-radius: 0.25em;
+}
+
+button:hover {
+	background: var(--color-button-hover);
 }
 
 @media (min-width: 720px) {
