--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -3,11 +3,12 @@
 :root {
 	--font-body: 'Noto Sans KR', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
+	--color-bg-0: rgb(254, 252, 242);
+	--color-bg-1: hsl(46, 100%, 97%);
+	--color-bg-2: hsl(38, 44%, 95%);
 	--color-theme-1: #ff3e00;
-	--color-theme-2: #4075a6;
+	--color-theme-2: #ffd969;
+	--color-theme-3: #f27b50;
 	--color-text: rgba(0, 0, 0, 0.7);
 	--color-button: #ffffff;
 	--color-button-hover: #cdcdcd;
@@ -21,14 +22,7 @@ body {
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
-	background-color: var(--color-bg-1);
 	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
 h1,
@@ -95,6 +89,7 @@ button {
 	background: var(--color-button);
 	border: 0px;
 	border-radius: 0.25em;
+	align-items: center;
 }
 
 button:hover {
