--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -99,6 +99,10 @@ button:hover {
 	background-blend-mode: multiply;
 }
 
+textarea {
+	word-spacing: -0.3em;
+}
+
 @media (min-width: 720px) {
 	h1 {
 		font-size: 2.4rem;
