--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -12,7 +12,7 @@
 	--color-text: rgba(0, 0, 0, 0.7);
 	--color-button: #ffffff;
 	--color-button-hover: rgba(0, 0, 0, 0.1);
-	--color-sidebar: #ededed;
+	--color-border: #ededed;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
@@ -101,12 +101,8 @@ button:hover {
 
 textarea {
 	word-spacing: -0.3em;
-}
-
-@media (min-width: 720px) {
-	h1 {
-		font-size: 2.4rem;
-	}
+	padding: 0;
+	width: 100vw;
 }
 
 .visually-hidden {
@@ -119,4 +115,14 @@ textarea {
 	position: absolute;
 	width: 1px;
 	white-space: nowrap;
+}
+
+@media (min-width: 720px) {
+	h1 {
+		font-size: 2.4rem;
+	}
+	
+	textarea {
+		width: auto;
+	}
 }
